Konva added to proyect, draws blue rectangle on index page.

--- a/webapp/main/templates/base.html
+++ b/webapp/main/templates/base.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html>
     <head>
+        <script src="https://unpkg.com/konva@8.3.12/konva.min.js"></script>
         <style type="text/css">
             .sidenav {
                 height: 100%;
