--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -28,23 +28,22 @@
         let bar = null;
         let isDrawing = false;
 
-        stage.on("mousedown", mousedownHandler);
+        stage.on("dblclick", doubleclickHandler);
         stage.on("mousemove", mousemoveHandler);
         stage.on("mouseup", mouseupHandler);
 
         let clickPositionX = null;
         let clickPositionY = null;
-        function mousedownHandler(){
+        function doubleclickHandler(){
             isDrawing = true;
-            clickPositionX = stage.getPointerPosition().x,
-            clickPositionY = stage.getPointerPosition().y,
             bar = new Konva.Rect({
-                x: clickPositionX,
-                y: clickPositionY,
+                x: stage.getPointerPosition().x - 10,
+                y: stage.getPointerPosition().y - 10,
                 width: 20,
                 height: 20,
                 fill: "lightblue",
                 stroke: "black",
+                draggable: true,
             });
             layer.add(bar).batchDraw();
         }
@@ -55,10 +54,10 @@
 
         function mousemoveHandler(){
             if (!isDrawing) return false;
-            const newWidth = stage.getPointerPosition().x - bar.x();
-            const newHeight = stage.getPointerPosition().y - bar.y();
+            const newWidth = stage.getPointerPosition().x - bar.x() + 10;
+            const newHeight = stage.getPointerPosition().y - bar.y() + 10;
             bar.width(newWidth).height(newHeight);
-            layer.batchDraw();
+            layer.batchDraw();    
         }
         
     </script>
