Added border to stage.

--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -17,6 +17,7 @@
             width: canvasWidth,
             container: "konva-holder",
         });
+        stage.getContainer().style.border = '1px solid black';
         let layer = new Konva.Layer();
         stage.add(layer);
 
