--- a/webapp/main/templates/base.html
+++ b/webapp/main/templates/base.html
@@ -59,14 +59,14 @@
         <div id="content" name="content" class="main">
             <div class="row justify-content-center">
                 <div class="col-8">
-                    <h1 class="mt-2">Cleverhome</h1>
+                    <h1 class="mt-2">ITS Estatica</h1>
                     <hr class="mt-0 mb-4">
                     {% block content %}
                     {% endblock %}
                 </div>
             </div>
         </div>
-
+        
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
                 integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
                 crossorigin="anonymous"></script>
