--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -106,6 +106,9 @@
         let currentShape;
         var menuNode = document.getElementById('menu');
         document.getElementById('delete-button').addEventListener('click', () => {
+            if (shape.name() === "stage"){
+                return;
+            }
             currentShape.destroy();
         });
 
@@ -152,6 +155,7 @@
         function stage_layer_grid(){
 
             stage = new Konva.Stage({
+                name: 'stage',
                 height: canvasHeight,
                 width: canvasWidth,
                 container: "konva-holder",
@@ -537,6 +541,9 @@
         }
 
         function rotateRight(){
+            if (shape.name() === "stage"){
+                return;
+            }
             // This is the important call ! Cross is the rotation point as illustrated by crosshairs.
             rotateAroundPoint(shape, rotateToRight, {x: shape.x(), y: shape.y()});
             
@@ -548,6 +555,9 @@
         }
 
         function rotateLeft(){
+            if (shape.name() === "stage"){
+                return;
+            }
             // This is the important call ! Cross is the rotation point as illustrated by crosshairs.
             rotateAroundPoint(shape, rotateToLeft, {x: shape.x(), y: shape.y()});
             
