Cambios de largo de la barra

--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -189,7 +189,7 @@
                     anchorStroke: 'red',
                     anchorFill: 'lightblue',
                     anchorSize: 5,
-                    enabledAnchors: ['top-left', 'top-right', 'bottom-left', 'bottom-right'],
+                    enabledAnchors: ['middle-left', 'middle-right'],
                 });
                 layer.add(tr);
                 transformers.push(tr);
