--- a/webapp/main/templates/index.html
+++ b/webapp/main/templates/index.html
@@ -220,7 +220,7 @@
                 draggable: true,
             });
             bar.on('dragstart', (e) => {
-                shadowFigure = bar.clone({
+                shadowFigure = e.target.clone({
                     fill: '#FF7B17',
                     opacity: 0.6,
                     stroke: '#CF6412',
@@ -229,20 +229,20 @@
                 });
                 layer.add(shadowFigure);
                 shadowFigure.moveToTop();
-                bar.moveToTop();
+                e.target.moveToTop();
             });
             bar.on('dragend', (e) => {
-                bar.position({
-                x: Math.round(bar.x() / blockSnapSize) * blockSnapSize,
-                y: Math.round(bar.y() / blockSnapSize) * blockSnapSize
+                e.target.position({
+                x: Math.round(e.target.x() / blockSnapSize) * blockSnapSize,
+                y: Math.round(e.target.y() / blockSnapSize) * blockSnapSize
                 });
                 stage.batchDraw();
                 shadowFigure.destroy();
             });
             bar.on('dragmove', (e) => {
                 shadowFigure.position({
-                x: Math.round(bar.x() / blockSnapSize) * blockSnapSize,
-                y: Math.round(bar.y() / blockSnapSize) * blockSnapSize
+                x: Math.round(e.target.x() / blockSnapSize) * blockSnapSize,
+                y: Math.round(e.target.y() / blockSnapSize) * blockSnapSize
                 });
                 stage.batchDraw();
             });
